increase/decrease method on node

--- a/example/example.html
+++ b/example/example.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	
 	<script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
+	<script src="https://code.angularjs.org/1.2.26/i18n/angular-locale_zh-tw.js"></script>
 
 	<script src="../datetime.js"></script>
 	<link rel="stylesheet" href="../datetime.css">
