Add createNode() function

--- a/example/example.html
+++ b/example/example.html
@@ -24,6 +24,6 @@
 <body class="container" ng-controller="myDate">
 	{{myDate}}
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control">
-	<input type="text" datetime="MMM" ng-model="myDate" class="form-control">
+	<input type="text" datetime="MMMa" ng-model="myDate" class="form-control">
 </body>
 </html>
