--- a/example/example.html
+++ b/example/example.html
@@ -4,23 +4,29 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 	<script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
 	<script src="https://code.angularjs.org/1.2.26/i18n/angular-locale_zh-tw.js"></script>
 
 	<script src="../datetime.js"></script>
 	<link rel="stylesheet" href="../datetime.css">
+	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
 	<script>
-		angular.module("App", ["datetime"]).controller("myDate", function($scope){
+		angular.module("App", ["datetime"]).controller("myDate", function($scope, $filter){
 			$scope.myDate = new Date();
 		});
 	</script>
 </head>
 <body class="container" ng-controller="myDate">
-	{{myDate}}
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control">
+	<pre><code>myDate Model: {{myDate}}</code></pre>
+	<div class="form-group">
+		<label for="msql">MySQL date</label>
+		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" id="mysql">
+	</div>
+	<div class="form-group">
+		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control">
+	</div>
+
 </body>
 </html>
