--- a/example/example.html
+++ b/example/example.html
@@ -21,11 +21,12 @@
 <body class="container" ng-controller="myDate">
 	<pre><code>myDate Model: {{myDate}}</code></pre>
 	<div class="form-group">
-		<label for="msql">MySQL date</label>
+		<label for="msql">MySQL Date</label>
 		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" id="mysql">
 	</div>
 	<div class="form-group">
-		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control">
+		<label for="fullDate">Full Date</label>
+		<input type="text" datetime="fullDate" ng-model="myDate" class="form-control" id="fullDate">
 	</div>
 
 </body>
