Fix tab behavior

--- a/example/example.html
+++ b/example/example.html
@@ -21,7 +21,7 @@
 <body class="container" ng-controller="myDate">
 	<pre><code>myDate Model: {{myDate}}</code></pre>
 	<div class="form-group">
-		<label for="msql">MySQL Date</label>
+		<label for="msql">MySQL Datetime</label>
 		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" id="mysql">
 	</div>
 	<div class="form-group">
