Fix bounding bug

--- a/example/example.html
+++ b/example/example.html
@@ -25,12 +25,41 @@
 		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" id="mysql">
 	</div>
 	<div class="form-group">
+		<label for="millisecond">Millisecond Test</label>
+		<input type="text" datetime=".sss ,sss" ng-model="myDate" class="form-control" id="millisecond">
+	</div>
+	<h3>Localizable formats</h3>
+	<div class="form-group">
+		<label for="medium">Medium</label>
+		<input type="text" datetime="medium" ng-model="myDate" class="form-control" id="medium">
+	</div>
+	<div class="form-group">
+		<label for="short">Short</label>
+		<input type="text" datetime="short" ng-model="myDate" class="form-control" id="short">
+	</div>
+	<div class="form-group">
 		<label for="fullDate">Full Date</label>
 		<input type="text" datetime="fullDate" ng-model="myDate" class="form-control" id="fullDate">
 	</div>
 	<div class="form-group">
-		<label for="millisecond">Millisecond Test</label>
-		<input type="text" datetime=".sss ,sss" ng-model="myDate" class="form-control" id="millisecond">
+		<label for="longDate">Long Date</label>
+		<input type="text" datetime="longDate" ng-model="myDate" class="form-control" id="longDate">
+	</div>
+	<div class="form-group">
+		<label for="mediumDate">Medium Date</label>
+		<input type="text" datetime="mediumDate" ng-model="myDate" class="form-control" id="mediumDate">
+	</div>
+	<div class="form-group">
+		<label for="shortDate">Short Date</label>
+		<input type="text" datetime="shortDate" ng-model="myDate" class="form-control" id="shortDate">
+	</div>
+	<div class="form-group">
+		<label for="mediumTime">Medium Time</label>
+		<input type="text" datetime="mediumTime" ng-model="myDate" class="form-control" id="mediumTime">
+	</div>
+	<div class="form-group">
+		<label for="shortTime">Short Time</label>
+		<input type="text" datetime="shortTime" ng-model="myDate" class="form-control" id="shortTime">
 	</div>
 
 </body>
