--- a/example/example.html
+++ b/example/example.html
@@ -24,15 +24,15 @@
 </head>
 <body class="container" ng-controller="myDate">
 	<h2>Angular Datetime <small>Demo Page</small></h2>
-	<button class="btn-default" ng-click="myDate = createDate()">Set myDate to now</button>
+	<button class="btn-default" ng-click="myDate = createDate()">Set date model to now</button>
 	<pre class="pool">myDate Model: {{myDate}}</pre>
 	<div class="form-group">
-		<label for="msql">MySQL Datetime</label>
+		<label for="msql">MySQL format</label>
 		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" id="mysql">
 	</div>
 	<div class="form-group">
-		<label for="millisecond">Millisecond Test</label>
-		<input type="text" datetime=".sss ,sss" ng-model="myDate" class="form-control" id="millisecond">
+		<label for="iso">Timezone</label>
+		<input type="text" datetime="Z" ng-model="myDate" class="form-control" id="iso">
 	</div>
 	<h3>Localizable formats</h3>
 	<div class="form-group">
