--- a/demo.html
+++ b/demo.html
@@ -2,13 +2,12 @@
 <html lang="tw" ng-app="App">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Angular Datetime</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
 
 	<script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
 
-	<script src="../datetime.js"></script>
-	<link rel="stylesheet" href="../datetime.css">
+	<script src="datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
 	<script>
