--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
 -->
 	<p>To use the directive, add <code>datetime="date-format"</code> attribute to your input.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control">
-	<pre><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
+	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 
 	<h3>Localizable formats</h3>
 	<div class="form-group">
@@ -67,13 +67,13 @@
 		<input type="text" datetime="shortTime" ng-model="myDate" class="form-control" id="shortTime">
 	</div>
 
-	<pre><code>&lt;input type="text" datetime="medium" ng-model="myDate"&gt;
-&lt;input type="text" datetime="short" ng-model="myDate"&gt;
-&lt;input type="text" datetime="fullDate" ng-model="myDate"&gt;
-&lt;input type="text" datetime="longDate" ng-model="myDate"&gt;
-&lt;input type="text" datetime="mediumDate" ng-model="myDate"&gt;
-&lt;input type="text" datetime="shortDate" ng-model="myDate"&gt;
-&lt;input type="text" datetime="mediumTime" ng-model="myDate"&gt;
-&lt;input type="text" datetime="shortTime" ng-model="myDate"&gt;</code></pre>
+	<pre class="code"><code>&lt;input type="text" datetime="medium" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="short" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="fullDate" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="longDate" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="mediumDate" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="shortDate" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="mediumTime" ng-model="myDate"&gt;
+		&lt;input type="text" datetime="shortTime" ng-model="myDate"&gt;</code></pre>
 </body>
 </html>
