Update render process

--- a/demo.html
+++ b/demo.html
@@ -75,5 +75,11 @@
 &lt;input type="text" datetime="shortDate" ng-model="myDate"&gt;
 &lt;input type="text" datetime="mediumTime" ng-model="myDate"&gt;
 &lt;input type="text" datetime="shortTime" ng-model="myDate"&gt;</code></pre>
+
+	<h3>Other tests</h3>
+	<div class="form-group">
+		<label for="duplicate-name">Duplicate name test</label>
+		<input type="text" datetime=",sss .sss" ng-model="myDate" class="form-control" id="duplicate-name">
+	</div>
 </body>
 </html>
