--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,7 @@
 
 	<script src="datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
+<!--	<link rel="stylesheet" href="../end2end/dist/end2end.css">-->
 
 	<script>
 		angular.module("App", ["datetime"]).controller("myDate", function($scope, $filter, $locale){
@@ -19,7 +20,7 @@
 		});
 	</script>
 
-	<!--[if lt ie 9]>
+	<!--[if lte ie 8]>
 	<script src="https://rawgit.com/scottjehl/Respond/master/dest/respond.src.js"></script>
 	<![endif]-->
 </head>
