--- a/demo.html
+++ b/demo.html
@@ -7,16 +7,17 @@
 
 	<script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
 
-	<script src="datetime.js"></script>
+	<script src="dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
-<!--	<link rel="stylesheet" href="../end2end/dist/end2end.css">-->
 
 	<script>
-		angular.module("App", ["datetime"]).controller("myDate", function($scope, $filter, $locale){
+		angular.module("App", ["datetime"]).controller("myDate", function($scope, datetime){
 			$scope.myDate = new Date();
 			$scope.createDate = function(){
 				return new Date();
 			}
+			var parser = datetime("yyyy-MM-dd");
+			console.log(parser);
 		});
 	</script>
 
