Fix: Negative year will crash the app

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Angular Datetime</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+	<script src="https://code.angularjs.org/1.2.28/angular.js"></script>
 
 	<script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
 
