Support timezone token `Z`

--- a/demo.html
+++ b/demo.html
@@ -49,6 +49,9 @@
 				$scope.myDate.required = null;
 				$scope.myDate.other = null;
 			}
+
+			var parser = datetime("Z");
+			console.log(parser.getText());
 		});
 	</script>
 
