--- a/demo.html
+++ b/demo.html
@@ -92,16 +92,18 @@
 	</div>
 
 	<h3>Required</h3>
+	<p>You won't be able to clear this field if required. You can still set the model value to null though.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate.demo" class="form-control" required>
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" required&gt;</code></pre>
 
 	<h3>Model format</h3>
-	<p>You need the model value to be a string?</p>
+	<p>You can use a date string instead of date object as model value.</p>
 	<input type="text" class="form-control" datetime="medium" ng-model="myDate.model" datetime-model="yyyy-MM-dd HH:mm:ss">
 	<pre class="output">myDate = {{myDate.model | json}}</pre>
 	<pre class="code"><code>&lt;input type="text" datetime="medium" datetime-model="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 
 	<h3>Localizable formats</h3>
+	<p>The parser supports localizable formats in angular.</p>
 	<div class="form-group" ng-repeat="format in formats">
 		<label>
 			{{format}}
