Fix datetime-model bug

--- a/demo.html
+++ b/demo.html
@@ -81,7 +81,7 @@
 
 	<h3>Model format</h3>
 	<p>You can use a date string instead of date object as model value.</p>
-	<input type="text" class="form-control" datetime="medium" ng-model="myDate.model" datetime-model="yyyy-MM-dd HH:mm:ss">
+	<input type="text" class="form-control" datetime="medium" ng-model="myDateString" datetime-model="yyyy-MM-dd HH:mm:ss">
 	<pre class="output">myDate = {{myDateString | json}}</pre>
 	<pre class="code"><code>&lt;input type="text" datetime="medium" datetime-model="yyyy-MM-dd HH:mm:ss" ng-model="myDateString"&gt;</code></pre>
 
