--- a/demo.html
+++ b/demo.html
@@ -56,7 +56,7 @@
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 
 	<h3>Default value</h3>
-	<p>The initial value of the date. Try to focus this field after clearing.</p>
+	<p>If the model is undefined and the input elemnt get focus, use `default` as its default value.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" default="Jan 1, 2000">
 	<pre class="code" ng-non-bindable><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" default="Jan 1, 2000"></code></pre>
 
