--- a/demo.html
+++ b/demo.html
@@ -58,7 +58,7 @@
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 
 	<h3>Default value</h3>
-	<p>If the model is undefined and the input elemnt get focus, the directive will use `default` attribute as its initial value.</p>
+	<p>If the model value is undefined and the input element is focused, the directive will use `default` attribute as its initial value.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" default="Jan 1, 2000">
 	<pre class="code" ng-non-bindable><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" default="Jan 1, 2000"></code></pre>
 
