Add timezone token demo

--- a/demo.html
+++ b/demo.html
@@ -117,5 +117,17 @@
 			<input type="text" class="form-control" datetime="yyyy-MM-dd" ng-model="data.myDate">
 		</label>
 	</div>
+	<div class="form-group">
+		<label>
+			Default timezone
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate">
+		</label>
+	</div>
+	<div class="form-group">
+		<label>
+			UTC timezone
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-utc>
+		</label>
+	</div>
 </body>
 </html>
