--- a/example/demo-angular-1.5.html
+++ b/example/demo-angular-1.5.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Angular Datetime</title>
 	<script src="https://code.angularjs.org/1.5.3/angular.js"></script>
-	<script src="dist/datetime.js"></script>
+	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
 	<script>
