--- a/example/demo.html
+++ b/example/demo.html
@@ -5,9 +5,7 @@
 	<title>Angular Datetime</title>
 	<script src="https://code.angularjs.org/1.2.28/angular.js"></script>
 
-	<script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
-
-	<script src="dist/datetime.js"></script>
+	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
 	<script>
