--- a/example/demo.html
+++ b/example/demo.html
@@ -136,7 +136,7 @@
 		</label>
 	</div>
 	<h3>Custom separator</h3>
-	<p>Used to jump on the next segment when pressing separator key. In this example angular-datetime will jump on the next segment when pressing `.` or `,`.</p>
+	<p>Used to jump on the next segment when pressing separator key. In this example angular-datetime will jump on the next segment when pressing <code>.</code> or <code>,</code>.</p>
 	<div class="form-group">
 		<label>
 			<input type="text" class="form-control" datetime="dd.MM.yyyy" ng-model="data.myDate" datetime-separator=",">
