--- a/example/demo-angular-1.5.html
+++ b/example/demo-angular-1.5.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Angular Datetime</title>
-	<script src="https://code.angularjs.org/1.5.3/angular.js"></script>
+	<script src="https://code.angularjs.org/1.5.8/angular.js"></script>
+
 	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
@@ -55,11 +56,6 @@
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control">
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 
-	<h3>Default value</h3>
-	<p>If the field is empty and the input element is focused, the directive will use `default` attribute as its initial value.</p>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" default="Jan 1, 2000">
-	<pre class="code" ng-non-bindable><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" default="Jan 1, 2000"></code></pre>
-
 	<h3>Min / Max</h3>
 	<p>Validation for min/max date. The min/max attribute will be used to construct the date object.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" min="{{data.min.toUTCString()}}" max="{{data.max.toUTCString()}}">
@@ -83,6 +79,9 @@
 	<p>You won't be able to clear this field if required. You can still set the model value to null though.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" required>
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" required&gt;</code></pre>
+	<p>Use <code>ng-require</code>.</p>
+	<label class="checkbox"><input type="checkbox" ng-model="isRequired">Required</label>
+	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-required="isRequired" class="form-control" ng-model="data.myDate">
 
 	<h3>Model format</h3>
 	<p>You can use a date string instead of date object as model value.</p>
@@ -94,6 +93,11 @@
 	<p>By the default, angular-datetime will format view value in local timezone. Add <code>datetime-utc</code> attribute to show UTC time to users.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" datetime-utc>
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" datetime-utc&gt;</code></pre>
+	<p>Also support expression.</p>
+	<label class="checkbox"><input type="checkbox" ng-model="isUtc">Show UTC</label>
+	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" datetime-utc="isUtc">
+	<pre class="code"><code>&lt;label class="checkbox">&lt;input type="checkbox" ng-model="isUtc">Show UTC&lt;/label>
+&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" datetime-utc="isUtc"></code></pre>
 
 	<h3>Localizable formats</h3>
 	<p>The parser supports localizable formats in angular.</p>
@@ -135,7 +139,7 @@
 		</label>
 	</div>
 	<h3>Custom separator</h3>
-	<p>Used to jump on the next segment when pressing separator key. In this example angular-datetime will jump on the next segment when pressing `.` or `,`.</p>
+	<p>Used to jump on the next segment when pressing separator key. In this example angular-datetime will jump on the next segment when pressing <code>.</code> or <code>,</code>.</p>
 	<div class="form-group">
 		<label>
 			<input type="text" class="form-control" datetime="dd.MM.yyyy" ng-model="data.myDate" datetime-separator=",">
