--- a/example/demo.html
+++ b/example/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Angular Datetime</title>
-	<script src="https://code.angularjs.org/1.2.28/angular.js"></script>
+	<script src="https://code.angularjs.org/1.2.30/angular.js"></script>
 
 	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
@@ -56,11 +56,6 @@
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control">
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 
-	<h3>Default value</h3>
-	<p>If the field is empty and the input element is focused, the directive will use `default` attribute as its initial value.</p>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" default="Jan 1, 2000">
-	<pre class="code" ng-non-bindable><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" class="form-control" default="Jan 1, 2000"></code></pre>
-
 	<h3>Min / Max</h3>
 	<p>Validation for min/max date. The min/max attribute will be used to construct the date object.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" min="{{data.min.toUTCString()}}" max="{{data.max.toUTCString()}}">
@@ -84,6 +79,9 @@
 	<p>You won't be able to clear this field if required. You can still set the model value to null though.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" required>
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" required&gt;</code></pre>
+	<p>Use <code>ng-require</code>.</p>
+	<label class="checkbox"><input type="checkbox" ng-model="isRequired">Required</label>
+	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-required="isRequired" class="form-control" ng-model="data.myDate">
 
 	<h3>Model format</h3>
 	<p>You can use a date string instead of date object as model value.</p>
