--- a/example/demo-1.5.html
+++ b/example/demo-1.5.html
@@ -5,6 +5,8 @@
 	<title>Angular Datetime</title>
 	<script src="https://code.angularjs.org/1.5.8/angular.js"></script>
 
+	<script src="../dist/polyfill.js"></script>
+	<script src="../node_modules/custom-input/dist/custom-input.js"></script>
 	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
@@ -50,6 +52,7 @@
 	<h2>Angular Datetime <small>Demo Page</small></h2>
 	<p>To use the directive, add <code>datetime="date-format"</code> attribute to your input.</p>
 	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control">
+	<pre>myDate = {{data.myDate | json}}</pre>
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate"&gt;</code></pre>
 	
 	<p>To set a date, just set your model to a Date object. Set to null to remove it.</p>
@@ -61,7 +64,10 @@
 
 	<h3>min / max</h3>
 	<p>Validation for min/max date. The min/max attribute will be used to construct the date object.</p>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" min="{{data.min.toUTCString()}}" max="{{data.max.toUTCString()}}">
+	<form name="minmaxForm">
+		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" min="{{data.min.toUTCString()}}" max="{{data.max.toUTCString()}}" name="input">
+	</form>
+	<pre>input.$error = {{minmaxForm.input.$error | json}}</pre>
 	<pre class="code" ng-non-bindable><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" min="Jan 1, 2010" max="Dec 31, 2019"&gt;</code></pre>
 
 	<div class="form-group">
@@ -80,12 +86,18 @@
 
 	<h3>required</h3>
 	<p><code>ng-invalid-required</code> will be added to the class list when all parts are empty.</p>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" required>
+	<form name="requireForm">
+		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" required name="input">
+	</form>
+	<pre>input.$error = {{requireForm.input.$error | json}}</pre>
 	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" required&gt;</code></pre>
 	
 	<p>Use <code>ng-require</code>.</p>
-	<label class="checkbox"><input type="checkbox" ng-model="isRequired">Required</label>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-required="isRequired" class="form-control" ng-model="data.myDate">
+	<form name="ngRequireForm">
+		<label class="checkbox"><input type="checkbox" ng-model="isRequired">Required</label>
+		<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-required="isRequired" class="form-control" ng-model="data.myDate" name="input">
+	</form>
+	<pre>input.$error = {{ngRequireForm.input.$error | json}}</pre>
 
 	<h3>model-format</h3>
 	<p>With this attribute, it will convert the model into a date string automatically.</p>
@@ -95,13 +107,15 @@
 
 	<h3>datetime-utc</h3>
 	<p>By the default, angular-datetime will format the date in local timezone. Add <code>datetime-utc</code> attribute to show in UTC timezone.</p>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" datetime-utc>
-	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="myDate" datetime-utc&gt;</code></pre>
+	<input type="text" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" class="form-control" datetime-utc>
+	<pre>myDate = {{data.myDate | json}}</pre>
+	<pre class="code"><code>&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="myDate" datetime-utc&gt;</code></pre>
 	<p>Also support expression.</p>
 	<label class="checkbox"><input type="checkbox" ng-model="isUtc">Show UTC</label>
-	<input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" datetime-utc="isUtc">
+	<input type="text" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" class="form-control" datetime-utc="isUtc">
+	<pre>myDate = {{data.myDate | json}}</pre>
 	<pre class="code"><code>&lt;label class="checkbox">&lt;input type="checkbox" ng-model="isUtc">Show UTC&lt;/label>
-&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="data.myDate" class="form-control" datetime-utc="isUtc"></code></pre>
+&lt;input type="text" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" class="form-control" datetime-utc="isUtc"></code></pre>
 
 	<h3>datetime-separator</h3>
 	<p>By the default, you can use left/right keys to navigate between each part of date. With this attribute, you will be able to use different keys to jump to next part.</p>
